Clean up code, remove crossed dependency between classes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <a id='download' type="download">Download .hack File</a>
       </div>
     </div>
+    <script type="module" src="/src/modules/instruction.js"></script>
     <script type="module" src="/src/modules/parser.js"></script>
     <script type="module" src="/src/modules/core.js"></script>
     <script type="module" src="/src/index.js"></script>
