Add refactor and complete features

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="file" id="source-upload" accept=".txt, .asm">
       </div>
       
-      <button id="process">Process</button>
+      <button id="process">Assemble</button>
 
       <div class="machine-code">
         <h2>Machine Code</h2>
